# dctrl-tools

./: .gitignore  Makefile.am  configure.ac
debian/: changelog  control  rules
gnulib/lib/: Makefile.am
gnulib/m4/: gnulib-cache.m4  gnulib-comp.m4
gnulib/po/: Makevars  POTFILES.in  af.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  hu.po  it.po  ja.po  ko.po  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  rw.po  sk.po  sl.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
grep-dctrl/: grep-dctrl.c
join-dctrl/: join-dctrl.c
lib/: fnutil.c  msg.h
po/: .gitignore  ChangeLog  LINGUAS  Makevars  POTFILES.in
sort-dctrl/: sort-dctrl.c
sync-available/: sync-available.in
tbl-dctrl/: tbl-dctrl.c
